--- a/code/index.html
+++ b/code/index.html
@@ -5,12 +5,23 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="../favicon/favicon.ico" type="image/x-icon">
+    <link rel="stylesheet" href="./css/style.css">
     <title>Rpg Maps</title>
 </head>
 
 <body>
     <main>
-        <img src="../image/map-maniagun-imcomplet.jpg" alt="Mapa imagem">
+        <img src="../image/map-maniagun-imcomplet.jpg" alt="Mapa imagem" class="map">
+        <div class="buttons">
+            <button class="button btn-prev">Prev &lt; </button>
+            <button class="button btn-next">Next &gt; </button>
+            <button class="button btn-next">Next &gt; </button>
+            <button class="button btn-next">Next &gt; </button>
+            <button class="button btn-next">Next &gt; </button>
+            <button class="button btn-next">Next &gt; </button>
+            <button class="button btn-next">Next &gt; </button>
+        </div>
+
     </main>
 </body>
 
