--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Oxanium:wght@300;400;700&amp;display=swap" rel="stylesheet" />
 
-    <link rel="stylesheet" href="src/css/style.css">
-    <link rel="stylesheet" href="src/css/reset.css">
-    <link rel="stylesheet" href="src/css/reponsive.css">
+    <link rel="stylesheet" href="./src/css/style.css">
+    <link rel="stylesheet" href="./src/css/reset.css">
+    <link rel="stylesheet" href="./src/css/reponsive.css">
 
 </head>
 
@@ -74,7 +74,7 @@
             </ul>
         </section>
         <section class="personagem-selecionado">
-            <img class="personagem-grande" src="./src/image/card-NIR.png" alt="Personagem selecionado">
+            <img class="personagem-grande" src="./src/image/card-NIR.jpg" alt="Personagem selecionado">
             <div class="informacoes-personagem">
                 <h2 class="nome-personagem" id="nome-personagem">Nir</h2>
                 <p class="descricao-personagem" id="descricao-personagem"> Nir: o recém-coroado rei de Maniagun,
@@ -84,7 +84,7 @@
                     questionando sobre seu paradeiro.</p>
             </div>
             <audio id="espada-selecao" src="./src/audio/espada.mp3"></audio>
-
+            <audio id="fundo-music" src="./src/audio/videoplayback.mp3" preload="auto" loop></audio>
         </section>
     </main>
     <script src="./src/js/index.js"></script>
