--- a/index.html
+++ b/index.html
@@ -63,12 +63,12 @@
 
                 <li class="personagem" id="Guts" data-name="Guts"
                     data-description="Guts: é um guerreiro solitário e implacável, conhecido por sua força física e habilidades de combate excepcionais. Ele carrega um machado de guerra gigante chamado Dragonslayer e possui uma determinação inabalável para sobreviver e vingar-se dos demônios que assolam sua família.">
-                    <img src="./src/imagens/card-Guts.jpg" alt="Personagem Guts">
+                    <img src="./src/imagens/card-guts.jpg" alt="Personagem Guts">
                 </li>
                 <li class="personagem" id="drogus" data-name="drogus"
                     data-description="
                 Drogus: um destemido guerreiro de terras distantes, embarcou em uma busca épica para derrotar o temido ser mítico conhecido como Drakmor. Com sua espada ancestral em mãos e sua coragem inabalável, ele enfrentou batalhas sangrentas e desafiou os limites da resistência humana. No final, Drogus emergiu vitorioso, cravando sua lâmina no coração do monstro e garantindo seu lugar na história como o herói que derrotou o indomável Drakmor.">
-                    <img src="./src/imagens/card-drogus.jpg" alt="Personagem drogus">
+                    <img src="src/imagens/card-drogus.jpg" alt="Personagem drogus">
                 </li>
             </ul>
         </section>
