--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                     <img src="./src/imagens/card-caligola.jpg" alt="Personagem caligola">
                 </li>
 
-                <li class="personagem" id="Guts" data-name="Guts"
+                <li class="personagem" id="guts" data-name="guts"
                     data-description="Guts: é um guerreiro solitário e implacável, conhecido por sua força física e habilidades de combate excepcionais. Ele carrega um machado de guerra gigante chamado Dragonslayer e possui uma determinação inabalável para sobreviver e vingar-se dos demônios que assolam sua família.">
                     <img src="./src/imagens/card-guts.jpg" alt="Personagem Guts">
                 </li>
