--- a/index.html
+++ b/index.html
@@ -26,46 +26,46 @@
         <section class="personagens">
             <h1 class="titulo">selecione seu personagem</h1>
             <ul class="lista-de-personagens">
-                <li class="personagem selecionado" id="vanda" data-name="vanda"
+                <li class="personagem selecionado" id="vanda" data-name="Vanda"
                     data-description="Vanda: a feiticeira mais poderosa do mundo, encontrou seu fim trágico, mas renasceu como uma humilde humana. Determinada a recuperar seu poder, embarcou em uma jornada épica em busca dos 20 itens lendários espalhados pelo mundo. Com astúcia, magia e aliados improváveis, Vanda enfrenta perigos mortais, supera desafios e desvenda segredos antigos para reconstruir sua força e recuperar seu lugar como a feiticeira mais poderosa de todos os tempos.">
                     <img src="./src/imagens/card-vanda.jpg" alt="Personagem vanda">
                 </li>
 
-                <li class="personagem" id="fouster" data-name="fouster"
+                <li class="personagem" id="fouster" data-name="Fouster"
                     data-description="Fouster: um habilidoso vendedor de itens mágicos, percorre terras distantes em busca das mais raras e poderosas relíquias. Com sua sagacidade e conhecimento encantado, ele cativa seus clientes com seu carisma e oferece artefatos capazes de realizar os desejos mais profundos. Seu talento em encontrar e negociar itens únicos o torna um nome lendário no mundo do comércio mágico.">
                     <img src="./src/imagens/card-fouster.jpg" alt="Personagem fouster">
                 </li>
 
-                <li class="personagem" id="ethan" data-name="ethan"
+                <li class="personagem" id="ethan" data-name="Ethan"
                     data-description="Ethan: um gênio inventor, combinou dois itens lendários em uma arma estupenda, capaz de mudar os rumos da guerra do sangue. Com sua engenhosidade e habilidades únicas, ele criou uma arma imbatível, que aniquilou as forças inimigas e garantiu a vitória para seu lado. Sua genialidade e coragem o tornaram um herói aclamado, e seu feito ficou registrado na história como o momento decisivo na guerra.">
                     <img src="./src/imagens/card-ethan.jpg" alt="Personagem ethan">
                 </li>
 
-                <li class="personagem" id="nir" data-name="nir"
+                <li class="personagem" id="nir" data-name="Nir"
                     data-description="Nir: o recém-coroado rei de Maniagun, desapareceu misteriosamente, deixando seu povo perplexo e preocupado. Sem pistas sobre seu paradeiro ou o que aconteceu, o reino mergulhou em incerteza e ansiedade, aguardando ansiosamente pelo retorno de seu amado líder. Os segredos e o destino de Nir permanecem um enigma, deixando todos se questionando sobre seu paradeiro.">
                     <img src="./src/imagens/card-nir.jpg" alt="Personagem nir">
                 </li>
 
-                <li class="personagem" id="axotil" data-name="axotil"
+                <li class="personagem" id="axotil" data-name="Axotil"
                     data-description="Axotil: com a posse da lendária Espada das Eras, ele desafiou a poderosa Tiamat, a rainha dos dragões. Em um batalha sangrenta, Drakoth usou a espada para derrotar Tiamat, estabelecendo-se como um lendário campeão e trazendo um novo equilíbrio ao mundo.">
                     <img src="./src/imagens/card-axotil.jpg" alt="Personagem axotil">
                 </li>
 
-                <li class="personagem" id="royer" data-name="royer"
+                <li class="personagem" id="royer" data-name="Royer"
                     data-description="Royer Degur: um hábil lanceiro, enfrentou uma terrível tragédia quando perdeu seu irmão e sua família. Impulsionado pela dor e pela determinação, ele forjou um império a partir das cinzas, reunindo aliados e conquistando territórios com sua destreza no combate. Sua sede de justiça e desejo de honrar sua família tornaram-no um líder formidável e respeitado.">
                     <img src="./src/imagens/card-royer.jpg" alt="Personagem royer">
                 </li>
 
-                <li class="personagem" id="caligola" data-name="caligola"
+                <li class="personagem" id="caligola" data-name="Caligola"
                     data-description="Caligola: o renomado mago e gênio, descobriu um sombrio segredo: sua própria criação foi a origem de todo o caos que assolava o mundo. Determinado a corrigir seu erro, ele dominou a magia do tempo e voltou ao passado. Com suas habilidades mágicas incomparáveis, Caligola lutou contra seu eu passado, impedindo a criação do caos e trazendo equilíbrio e harmonia ao mundo que amava.">
                     <img src="./src/imagens/card-caligola.jpg" alt="Personagem caligola">
                 </li>
 
-                <li class="personagem" id="guts" data-name="guts"
+                <li class="personagem" id="guts" data-name="Guts"
                     data-description="Guts: é um guerreiro solitário e implacável, conhecido por sua força física e habilidades de combate excepcionais. Ele carrega um machado de guerra gigante chamado Dragonslayer e possui uma determinação inabalável para sobreviver e vingar-se dos demônios que assolam sua família.">
                     <img src="./src/imagens/card-guts.jpg" alt="Personagem Guts">
                 </li>
-                <li class="personagem" id="drogus" data-name="drogus"
+                <li class="personagem" id="drogus" data-name="Drogus"
                     data-description="
                 Drogus: um destemido guerreiro de terras distantes, embarcou em uma busca épica para derrotar o temido ser mítico conhecido como Drakmor. Com sua espada ancestral em mãos e sua coragem inabalável, ele enfrentou batalhas sangrentas e desafiou os limites da resistência humana. No final, Drogus emergiu vitorioso, cravando sua lâmina no coração do monstro e garantindo seu lugar na história como o herói que derrotou o indomável Drakmor.">
                     <img src="src/imagens/card-drogus.jpg" alt="Personagem drogus">
